# llm_forge

./: CHANGELOG.md  README.md  pyproject.toml  requirements-dev.txt  requirements.txt  setup.py
docs/: DEV_GUIDE.md  GLOSSARY.md
llm_forge_proto/: __init__.py  content_generator.py  input_parser.py  logging_config.py  main.py  reasoning_llm.py  response_loop.py  type_definitions.py
llm_forge_proto/templates/: __init__.py
src/llm_forge/: __init__.py  comparison_generator.py  content_generator.py  input_parser.py  logging_config.py  main.py  model_manager.py  nltk_utils.py  reasoning_llm.py  response_loop.py  trainer.py  type_definitions.py
src/llm_forge/axis/: __init__.py  catalogue.py
src/llm_forge/cli/: __init__.py  main.py
src/llm_forge/formatters/: __init__.py  renderer.py
src/llm_forge/templates/: __init__.py  content_templates.py
tests/: test_generate_comparison.py  test_input_parser.py
