[build-system]
requires      = [ "setuptools>=61.0.0", "wheel" ]
build-backend = "setuptools.build_meta"

[project]
name = "llm_forge"
version = "0.1.0"
description = "A tool for comparing different LLM models based on natural language prompts"
readme = "README.md"
requires-python = ">=3.8"
license = { text = "MIT" }
authors = [ { name = "Eidosian Forge", email = "contact@example.com" } ]
classifiers = [
    "Development Status :: 3 - Alpha",
    "Intended Audience :: Developers",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.8",
    "Programming Language :: Python :: 3.9",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
]
dynamic = [ "dependencies" ]

[project.scripts]
llm-forge = "llm_forge.cli.main:main"

[project.urls]
"Homepage"    = "https://github.com/example/llm_forge"
"Bug Tracker" = "https://github.com/example/llm_forge/issues"

[tool.setuptools.dynamic]
dependencies = { file = [ "requirements.txt" ] }

[tool.setuptools.packages.find]
where   = [ "src" ]
include = [ "llm_forge*" ]
exclude = [ "test*" ]

[tool.setuptools.package-data]
"llm_forge.templates" = [ "*.jinja", "*.txt", "*.html" ]

[project.optional-dependencies]
dev = [
    "pytest>=7.0.0,<8.0.0",
    "pytest-cov>=4.0.0,<5.0.0",
    "mypy>=1.0.0,<2.0.0",
    "black>=23.0.0,<26.0.0",
    "isort>=5.12.0,<6.0.0",
    "ruff>=0.0.275,<0.1.0",
    "pre-commit>=3.0.0,<4.0.0",
]
docs = [
    "sphinx>=6.0.0,<7.0.0",
    "sphinx-rtd-theme>=1.2.0,<2.0.0",
    "sphinx-autodoc-typehints>=1.22.0,<2.0.0",
    "myst-parser>=2.0.0,<3.0.0",
]
testing = [
    "pytest>=7.0.0,<8.0.0",
    "pytest-cov>=4.0.0,<5.0.0",
    "tox>=4.0.0,<5.0.0",
]
all = [ "llm_forge[dev,docs,testing]" ]

[tool.isort]
profile     = "black"
line_length = 88

[tool.black]
line-length    = 88
target-version = [ "py38", "py39", "py310", "py311", "py312" ]

[tool.mypy]
python_version           = "3.8"
warn_return_any          = true
warn_unused_configs      = true
disallow_untyped_defs    = true
disallow_incomplete_defs = true

[tool.ruff]
line-length    = 88
target-version = "py38"
select         = [ "E", "F", "B", "I", "N", "W" ]
ignore         = [  ]
